src/test/resources/de/monticore/umlcd4a/cocos/mcg/valid/CD4AC2003.cd
package de.monticore.umlcd4a.cocos.mcg.valid;

classdiagram CD4AC2003 {
  public class A;

  protected class B;
  
  private class C;
  
  class D;
}
