src/test/resources/de/monticore/umlcd4a/cocos/mcg/invalid/C4A53.cd
package de.monticore.umlcd4a.cocos.mcg.invalid;

classdiagram C4A53 {
  derived class A;
  / class B;

  static class C;
  
  public static class D;
  
  public / class E;
}
